--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 # created by virtualenv automatically
 .venv/*
-.idea/*
+.idea/misc.xml
+.idea/modules.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/seleniumTrainingProject.iml
+.idea/vcs.xml
+.idea/workspace.xml
