Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
 # created by virtualenv automatically
-.venv/*
-.idea/*
-.idea/misc.xml
-.idea/modules.xml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/seleniumTrainingProject.iml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/.name
+/.venv/
+/.idea/
 /downloads/
 /screenshots/
 /cookies/
